# forge

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCocoa.cmake
src/: AppDelegate.h  AppDelegate.mm  main.cpp  main.mm  window-manager.cpp  window-manager.h  window.cpp  window.h  x-window.cpp
src/common/: logger.cpp  logger.h
src/include/: gl.h  xcb.h  xkb.h  xlib.h
src/math/: aabb.h  mat.h  rect.h  vec.h
src/system/: cocoa-window-manager.h  cocoa-window-manager.mm  opengl-context.h  window-manager-incl.h  window-manager.h  x-window-manager.cpp  x-window-manager.h  xcb-window-manager.cpp  xcb-window-manager.h
src/window/: window-incl.h  x-window.cpp
